<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="org.obesifix.obesifix.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calculate"
        android:name="org.obesifix.obesifix.ui.calculate.CalculateFragment"
        android:label="@string/title_calculate"
        tools:layout="@layout/fragment_calculate">
        <argument
            android:name="data"
            app:argType="org.obesifix.obesifix.network.response.FoodListItem"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="org.obesifix.obesifix.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_mentoring"
        android:name="org.obesifix.obesifix.ui.mentoring.MentoringFragment"
        android:label="@string/title_mentoring"
        tools:layout="@layout/fragment_mentoring" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.obesifix.obesifix.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/splashFragment"
        android:name="org.obesifix.obesifix.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_viewPagerFragment"
            app:destination="@id/viewPagerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_splashFragment_to_loginActivity"
            app:destination="@id/loginActivity"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="org.obesifix.obesifix.onboarding.ViewPagerFragment"
        android:label="fragment_view_pager"
        tools:layout="@layout/fragment_view_pager" >
        <action
            android:id="@+id/action_viewPagerFragment_to_loginActivity"
            app:destination="@id/loginActivity"
            app:popUpTo="@id/viewPagerFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <activity
        android:id="@+id/loginActivity"
        android:name="org.obesifix.obesifix.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />

    <activity
        android:id="@+id/detailScanFood"
        android:name="org.obesifix.obesifix.ui.detail.DetailScanFood"
        android:label="activity_detail_scan_food"
        tools:layout="@layout/activity_detail_scan_food" />
</navigation>